fixed issue with heading text overflowing.

--- a/public/css/heading.css
+++ b/public/css/heading.css
@@ -8,6 +8,9 @@
 	box-sizing:border-box;
 	border-left:1px solid #333333;
 	border-right:1px solid #333333;
+    overflow: hidden;
+    text-overflow: ellipsis;
+    white-space: nowrap;
 }
 .heading .button-close{
 	float:right;
